# bos-workspace/backend-nestjs/src/modules/roles/roles.controller.ts
@@ -15,6 +15,8 @@ import { RolesService } from './roles.service';
 import { CreateRoleDto } from './dto/create-role.dto';
 import { UpdateRoleDto } from './dto/update-role.dto';
 import { JwtAuthGuard } from '../../core/guards/jwt-auth.guard';
+import { Query, DefaultValuePipe } from '@nestjs/common';
+import { ApiQuery } from '@nestjs/swagger';
 
 @ApiTags('Roles (Vai trò & Phân quyền)')
 @ApiBearerAuth()
@@ -30,9 +32,23 @@ export class RolesController {
   }
 
   @Get()
-  @ApiOperation({ summary: 'Lấy danh sách vai trò' })
-  findAll() {
-    return this.rolesService.findAll();
+  @ApiOperation({ summary: 'Lấy danh sách vai trò (Có phân trang & Sắp xếp)' })
+  @ApiQuery({ name: 'page', required: false, type: Number, example: 1 })
+  @ApiQuery({ name: 'limit', required: false, type: Number, example: 10 })
+  @ApiQuery({ name: 'sortBy', required: false, type: String, example: 'id' })
+  @ApiQuery({
+    name: 'sortOrder',
+    required: false,
+    enum: ['asc', 'desc'],
+    example: 'desc',
+  })
+  findAll(
+    @Query('page', new DefaultValuePipe(1), ParseIntPipe) page: number,
+    @Query('limit', new DefaultValuePipe(10), ParseIntPipe) limit: number,
+    @Query('sortBy') sortBy?: string,
+    @Query('sortOrder') sortOrder?: 'asc' | 'desc',
+  ) {
+    return this.rolesService.findAll({ page, limit, sortBy, sortOrder });
   }
 
   @Get(':id')
