# bos-workspace/backend-nestjs/src/modules/users/users.controller.ts
@@ -15,6 +15,8 @@ import { UsersService } from './users.service';
 import { CreateUserDto } from './dto/create-user.dto';
 import { UpdateUserDto } from './dto/update-user.dto';
 import { JwtAuthGuard } from '../../core/guards/jwt-auth.guard';
+import { Query, DefaultValuePipe } from '@nestjs/common';
+import { ApiQuery } from '@nestjs/swagger';
 
 @ApiTags('Users (Người dùng)')
 @ApiBearerAuth()
@@ -30,9 +32,25 @@ export class UsersController {
   }
 
   @Get()
-  @ApiOperation({ summary: 'Lấy danh sách người dùng' })
-  findAll() {
-    return this.usersService.findAll();
+  @ApiOperation({
+    summary: 'Lấy danh sách người dùng (Có phân trang & Sắp xếp)',
+  })
+  @ApiQuery({ name: 'page', required: false, type: Number, example: 1 })
+  @ApiQuery({ name: 'limit', required: false, type: Number, example: 10 })
+  @ApiQuery({ name: 'sortBy', required: false, type: String, example: 'id' })
+  @ApiQuery({
+    name: 'sortOrder',
+    required: false,
+    enum: ['asc', 'desc'],
+    example: 'desc',
+  })
+  findAll(
+    @Query('page', new DefaultValuePipe(1), ParseIntPipe) page: number,
+    @Query('limit', new DefaultValuePipe(10), ParseIntPipe) limit: number,
+    @Query('sortBy') sortBy?: string,
+    @Query('sortOrder') sortOrder?: 'asc' | 'desc',
+  ) {
+    return this.usersService.findAll({ page, limit, sortBy, sortOrder });
   }
 
   @Get(':id')
